--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <img src="images\sairam.jpg" alt="Profile Picture" width="200" height="150">
+  <img src="sairam.jpg" alt="Profile Picture" width="200" height="150">
   <h1> Sairam Panda</h1>
   <p><em>Associate Software engineer at <strong><a href="https://hexaware.com/">Hexaware Technologies</a></strong>.</em></p>
   <p>I am a Full-Stack developer.I love travelling and I love coffe.</p>
